2011-10-09 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* Initial release